# website

./: .dockerignore  .env.dev.example  .env.example  .env.prod.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  COPYING  Dockerfile  Dockerfile.dev  Dockerfile.prod  Justfile  LICENSE  Makefile  Pipfile  README.md  container-entrypoint.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.dev.sh  fly.toml  gunicorn_config.py  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  rebuild-css.sh  wait-for-it.sh  webpack.config.js
.github/: docker_image_build.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: docker_image_build.yml  hot_osm.yml  pytest.yml  release-chart.yml
app/core/: models.py
app/core/migrations/: 0001_initial.py  0002_alter_partner_partner_logo_alter_partner_partner_url.py  0003_hotsearchablepage.py  0004_testpagepage.py  0005_remove_hotsearchablepage_intro_delete_testpagepage.py  0006_delete_hotsearchablepage.py  0014_errorpage.py  (+8 more)
app/events/: models.py
app/get_involved/: apps.py  models.py
app/impact_areas/: apps.py  models.py  views.py
app/job_opportunities/: apps.py  models.py
app/mapping_hubs/: apps.py  models.py
app/members/: apps.py  models.py
app/misc/: apps.py  forms.py  models.py
app/news/: apps.py  models.py
app/our_work/: apps.py  models.py
app/partners/: apps.py  models.py
app/programs/: apps.py  models.py
app/projects/: apps.py  models.py
app/rfp/: apps.py  models.py
app/search_page/: apps.py  models.py
app/tech/: apps.py  models.py
app/tools_and_resources/: apps.py  models.py
app/ui/: apps.py  models.py
app/volunteer_opportunities/: apps.py  models.py
app/who_we_are/: apps.py  models.py
chart/: CHANGELOG.md  Chart.yaml  LICENSE  README.md  values.yaml
chart/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  migrate-job.yaml  postgres.yaml  secrets.yaml  superuser-job.yaml
docs/localization/: translating_template_strings_in_django.md
frontend/: package-lock.json  package.json  postcss.config.js  tailwind.config.js
home/: models.py  wagtail_hooks.py
home/management/: migration_helpers.py
home/migrations/: 0003_homepage_landing_page_cta.py  0004_remove_homepage_landing_page_cta_homepage_hero_cta_and_more.py  0005_alter_homepage_hero_text.py  0006_homepage_carousel.py  0007_alter_homepage_carousel.py  0008_blankinaccessiblepage.py  0009_homepage_get_involved_button_link_and_more.py  0010_homepage_news_title_homepage_related_news_and_more.py  0011_rename_related_news_homepage_displayed_news_and_more.py  0012_homepage_who_we_are_image_and_more.py  0013_homepage_our_work_background.py  0014_homepage_mapping_hubs_background.py  0015_homepage_mapping_hubs_hub_learn_more.py  0016_homepage_opportunities_image.py  0017_homepage_impact_areas_learn_more.py  0018_homepage_navigation.py  0019_alter_homepage_navigation.py  0020_alter_homepage_navigation.py  0021_alter_homepage_navigation.py  0022_alter_homepage_navigation.py  0023_alter_homepage_navigation.py  0024_alter_homepage_navigation.py  0025_alter_homepage_navigation.py  0026_alter_homepage_navigation.py  0027_homepage_footer_candid_seal_and_more.py  0028_homepage_footer_bottom_copyright_and_more.py  0029_alter_homepage_navigation.py  0030_homepage_navigation_buttons_and_more.py  0031_homepage_e404_description_homepage_e404_links_and_more.py  0032_alter_homepage_e404_links.py  0033_remove_homepage_get_involved_button_link_and_more.py  0034_alter_homepage_carousel_alter_homepage_e404_links_and_more.py  0035_homepage_paginator_next_homepage_paginator_previous.py  0036_homepage_top_navigation_links_and_more.py  0037_homepage_top_navigation_donate_text_and_more.py  0038_homepage_footer_certifications.py  0039_homepage_social_share_links.py  0040_alter_homepage_navigation_and_more.py  0041_homepage_home_stats.py  0042_alter_homepage_home_stats.py  (+4 more)
home/templatetags/: debug_tags.py  homepage_filters.py  homepage_tags.py
hot_osm/: urls.py  wsgi.py
hot_osm/settings/: base.py  dev.py  production.py
hot_osm/static/: hot-osm-bundle.js
hot_osm/templates/: 404.html  500.html  base.html  webpack_test.html
hot_osm/tests/: test_example.py
search/: views.py
staticfiles/: staticfiles.json
staticfiles/css/: hot_osm_processed.02b475a1722b.css  hot_osm_processed.css  welcome_page_processed.css  welcome_page_processed.e113fcceae60.css
users/: admin.py  factory.py  models.py  test.py
users/migrations/: 0001_initial.py
utils/: urls.py  views.py
utils/templates/: language_switcher.html
utils/templatetags/: util_filters.py
(+546 files in other folders)
